fix overflow

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ h1, h2, #name{
     width: 100%;
     font-size:18px;
     padding-top:10px;
-    /* height: 100%; */
+    height: 100%;
 }
 
 .skills {
